--- a/html/workflow.html
+++ b/html/workflow.html
@@ -75,7 +75,7 @@
                 </div>
                 <!-- Modal Body -->
                 <div class="modal-body">
-                    <form ng-submit="submitTaskForm()" style="text-align:center;">
+                    <form ng-submit="submitTaskForm()" style="text-align:center; position:relative;">
                         <div class="input-group" style="margin:20px;">
                             <span class="input-group-addon success"><span class="glyphicon glyphicon-plus"></span></span>
                             <input id="task-name-input" type="text" class="form-control input-lg" name="validate-optional" placeholder="New Task" ng-model="taskFormName" required>
@@ -100,13 +100,21 @@
                                 </div>
                                 </div>
                         </div>
-                        <div class="input-group" style="margin:20px;">
+                        <div>
+                        <div class="input-group" style="margin-top:20px; margin-left:20px; margin-right:20px;" >
                             <span class="input-group-addon success"><span class="glyphicon glyphicon-user"></span></span>
                             <input id="tags" type="text" class="form-control input-lg" name="validate-optional" placeholder="Assignee" ng-model="taskFormAssignee" ng-keyup="assigneeInputKeyEvent($event)" autocomplete="off">
                         </div>
-                        <ul ng-repeat="assignee in assignees" style="padding:0; posiition: absolute;">
-                            <li>{{assignee}}</li>
+                         <ul ng-repeat="assignee in assignees" style="padding:0; posiition: absolute; z-index: 3; list-style-type: none; margin-left:20px; margin-right:20px;">
+                            <li><button type="button" ng-click="addItem()" style="width:100%; height:40px;">{{assignee.username}}</button></li>
                         </ul>
+                        </div>
+                        <!--
+                        <div class="input-group" style="margin-top:20px; margin-left:20px; margin-right:20px;" >
+                            <span class="input-group-addon success"><span class="glyphicon glyphicon-user"></span></span>
+                            <div> tom </div>
+                        </div>
+                        -->
                         <div style="margin:20px;">
                         <button id="create-task-button" type="submit" class="btn btn-primary col-xs-12 btn-lg" style="text-transform: uppercase;" ng-disabled="!taskFormName">{{taskFormState}}</button>
                         </div>
