--- a/html/workflow.html
+++ b/html/workflow.html
@@ -32,6 +32,8 @@
 
     </div>
 </nav>
+
+
 <div class="container">       
    <div id="workflow-container" class="row">
 
@@ -68,13 +70,16 @@
             <div class="modal-content" style="height:500px;">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <button id="dismiss-create-task-popup-button" type="button" class="btn btn-danger btn-md" data-dismiss="modal" ng-click="dismissTaskForm()"><i class="glyphicon glyphicon-remove"></i></button>
-                <h4 class="modal-title" id="myModalLabel" style="text-align: center">
-                {{taskFormState}} Task
-                </h4>
+                    <button id="dismiss-create-task-popup-button" type="button" class="btn btn-danger btn-md" data-dismiss="modal" ng-click="dismissTaskForm()"><i class="glyphicon glyphicon-remove"></i></button>      
+                    <ul class="nav nav-pills">
+                        <li id="task-details-tab"role="presentation" class="active"><a href="#" ng-click="showTaskDetailsView()"><i class="glyphicon glyphicon-cog"></i> Details</a></li>
+                        <li id="task-comments-tab" role="presentation"><a href="#" ng-click="showTaskCommentsView()"><i class="glyphicon glyphicon-comment"></i> {{comments.length}} Comments</a></li>
+                        <li id="task-activity-tab" role="presentation"><a href="#"><i class="glyphicon glyphicon-book"></i> Activity</a></li>
+                    </ul>
                 </div>
                 <!-- Modal Body -->
                 <div class="modal-body">
+                    <div class="task-details-view">
                     <form ng-submit="submitTaskForm()" style="text-align:center; position:relative;">
                         <div class="input-group" style="margin:20px;">
                             <span class="input-group-addon success"><span class="glyphicon glyphicon-plus"></span></span>
@@ -125,7 +130,58 @@
                         <div style="margin:20px;">
                         <button id="create-task-button" type="submit" class="btn btn-primary col-xs-12 btn-lg" style="text-transform: uppercase;" ng-disabled="!taskFormName">{{taskFormState}}</button>
                         </div>
-                    </form>                
+                    </form> 
+                    </div> 
+                    <div class="task-comments-view">
+                        <div style="width:100%; height: 350px; overflow: auto">
+                        <ul class="media-list" ng-repeat="comment in comments" >
+                            <li class="media">
+                                <div class="media-left">
+                                    <img src="http://placehold.it/60x60" class="img-circle">
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">
+                                        {{comment.creator.username}}
+                                        <br>
+                                        <small>
+                                            commented on {{comment.date}}
+                                        </small>
+                                    </h4>
+                                    <p>
+                                        {{comment.comment}}
+                                    </p>
+                                </div>
+                            </li>
+                            <!--
+                            <li class="media">
+                                <div class="media-left">
+                                    <img src="http://placehold.it/60x60" class="img-circle">
+                                </div>
+                                <div class="media-body">
+                                    <h4 class="media-heading">
+                                        Mauris Eu
+                                        <br>
+                                        <small>
+                                            commented on <a href="#">Post Title</a>
+                                        </small>
+                                    </h4>
+                                    <p>
+                                        Vivamus pulvinar mauris eu placerat blandit. In euismod tellus vel ex vestibulum congue...
+                                    </p>
+                                </div>
+                            </li>
+                            -->
+                        </ul>
+                        </div>
+                        <div class="comment-input">
+                            <form ng-submit="addComment(newComment)">
+                                <div class="input-group">
+                                        <input class="form-control send-message" ng-model="newComment" placeholder="Leave a comment!"></input>
+                                        <span class="input-group-addon btn btn-success" ng-click="addComment(newComment)">Send</span>
+                                </div> 
+                            </form> 
+                        </div>
+                    </div>
                 </div>
         </div>
     </div>
@@ -142,6 +198,7 @@
                     </div>
                         <div id='collapseOne' class='panel-collapse collapse in'>
                         <div class='panel-body'>
+                        <div style="max-height: 350px; overflow-y:scroll;">
                         <ul class='list-group' ng-repeat="task in workflow.tasks">
                             <li id="{{task._id}}" class="list-group-item task-box">
                                 <a href="#" style="text-decoration: none !important;" class="task-link">
@@ -158,9 +215,12 @@
                                 </a>
                             </li> 
                         </ul>
-                        <button id="add-task-button" class="btn btn-circle pull-right" ng-click="addTask(workflow)" data-toggle="modal" data-target="#task-form">
-                            <i class="glyphicon glyphicon-plus"></i>
-                        </button>
+                        </div>
+                        <div style="margin-top: 15px;">
+                            <button id="add-task-button" class="btn btn-circle pull-right" ng-click="addTask(workflow)" data-toggle="modal" data-target="#task-form">
+                                <i class="glyphicon glyphicon-plus"></i>
+                            </button>
+                        </div>
                         </div>
                 </div>
             </div>
