--- a/html/boards.html
+++ b/html/boards.html
@@ -1,107 +1,98 @@
 <!DOCTYPE html>
 <link href="/css/boards.css" rel="stylesheet">
 <body ng-controller="boardsController">
-	<div class="container">
-		<nav class="navbar navbar-default navbar-static-top">
-			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<!--nav links-->
-				<a class="navbar-brand navbar-center" href="#/">Boards</a>
-				<div class="collapse navbar-collapse">
-					<ul class="nav navbar-nav navbar-left">
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">Profile</a></li>
-								<li><a href="#">Settings</a></li>
-								<li><a ng-href="/login">Logout</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="#">Separated link</a></li>
-							</ul>
-						</li>
-						<form class="navbar-form navbar-left" role="search">
-							<input type="text" class="form-control" placeholder="Search">
-						</form>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<img class="avatar" src="http://s.cdpn.io/53198/floor_2.png" />
-						<li><a href="#">Mariah Carter</a></li>
-					</ul>
-				</div> <!-- /.navbar-collapse-->
-			</div> <!-- /.container-fluid-->
+	<div class="container">	
+		<nav class="navbar navbar-fixed-left navbar-minimal animate" role="navigation">
+		    <div class="navbar-toggler animate">
+		        <span class="menu-icon"></span>
+		    </div>
+		    <ul class="navbar-menu animate">
+		        <li>
+		            <a ng-href="/boards" class="animate">
+		                <span class="desc animate"> Boards </span>
+		                <span class="glyphicon glyphicon-th"></span>
+		            </a>
+		        </li>
+		        <li>
+		            <a href="/login" class="animate">
+		                <span class="desc animate"> Logout </span>
+		                <span class="glyphicon glyphicon-user"></span>
+		            </a>
+		        </li>
+		        <li>
+		            <a href="#contact-us" class="animate">
+		                <span class="desc animate"> How To Reach Us </span>
+		                <span class="glyphicon glyphicon-comment"></span>
+		            </a>
+		        </li>
+		    </ul>
 		</nav>
-		<div id="dashboard">
-			<!-- Button trigger modal -->
-			<button type="button" class="create-board-button" data-toggle="modal" data-target="#createBoardPopup">
-			+
-			</button>
+
+		<!-- Button trigger modal -->
+		<button type="button" class="create-board-button" data-toggle="modal" data-target="#createBoardPopup">
+        <i class="glyphicon glyphicon-plus"></i>
+		</button>
 			<!-- Modal -->
 			<div class="modal fade" id="createBoardPopup" tabindex="-1" role="dialog"
 			aria-labelledby="myModalLabel" aria-hidden="true" ng-model="boardPopupState">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<!-- Modal Header -->
-					<div class="modal-header">
-						<button type="button" class="close"
-						data-dismiss="modal" ng-click="dismissBoardPopup()">
-						<span aria-hidden="true">&times;</span>
-						<span class="sr-only">Close</span>
-					</button>
-					<h4 class="modal-title" id="myModalLabel">
-						New Board
-					</h4>
-				</div>
-				<!-- Modal Body -->
-				<div class="modal-body">
-					<form role="form" ng-submit="submitBoardForm()" method="POST">
-						<div class="form-group">
-							<div class="input-group">
-									<span class="input-group-addon"><i class="fa fa-plus fa-fw"></i></span>
-								<input class="form-control"
-								id="exampleInputEmail1" ng-model="newBoardTitle" placeholder="Board Title"/>
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<!-- Modal Header -->
+						<div class="modal-header">
+							<button type="button" class="close"
+							data-dismiss="modal" ng-click="dismissBoardPopup()">
+							<span aria-hidden="true">&times;</span>
+							<span class="sr-only">Close</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel">
+							New Board
+						</h4>
+					</div>
+					<!-- Modal Body -->
+					<div class="modal-body">
+						<form role="form" ng-submit="submitBoardForm()" method="POST">
+							<div class="form-group">
+								<div class="input-group">
+										<span class="input-group-addon"><i class="fa fa-plus fa-fw"></i></span>
+									<input class="form-control"
+									id="exampleInputEmail1" ng-model="newBoardTitle" placeholder="Board Title"/>
+								</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<div class = "input-group">
-								<span class="input-group-addon"><i class="fa fa-pencil fa-fw"></i></span>
-								<input class="form-control"
-								id="exampleInputPassword1" ng-model="newBoardDescription" placeholder="Description"/>
+							<div class="form-group">
+								<div class = "input-group">
+									<span class="input-group-addon"><i class="fa fa-pencil fa-fw"></i></span>
+									<input class="form-control"
+									id="exampleInputPassword1" ng-model="newBoardDescription" placeholder="Description"/>
+								</div>
 							</div>
-						</div>
-						<div class="form-group">
-							<div class = "input-group">
-									<span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-									<input class="form-control" id="exampleInputPassword1" placeholder="Members"/>
+							<div class="form-group">
+								<div class = "input-group">
+										<span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
+										<input class="form-control" id="exampleInputPassword1" placeholder="Members"/>
+								</div>
 							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="submit" class="btn btn-primary">Submit</button>
-						</div>
-					</form>					
+							<div class="modal-footer">
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</div>
+						</form>					
+					</div>
 				</div>
 			</div>
 		</div>
-</div>
-	<div>
-		<ul ng-repeat="board in boardsList">
-			<li class="board">
-				<a ng-href="/boards/{{board._id}}">
-					<h3>{{board.title}}</h3>
-					<div>{{board.description}}</div>
-					<div>By: {{board.creator.username}}</div>
-				</a>
-				<button type="button" class="btn btn-danger btn-md board-remove-button" ng-click="deleteBoard(board._id)"><i class="glyphicon glyphicon-remove"></i></button>
-				<button type="button" class="btn btn-info btn-md board-edit-button" ng-click="editBoard(board)"><i class="glyphicon glyphicon-cog"></i></button>
-			</li>	
-		</ul>
-	</div>
-</div>
+		<div class="boards-container">
+			<ul ng-repeat="board in boardsList">
+				<li class="board">
+					<a ng-href="/boards/{{board._id}}">
+						<div>
+						<h3>{{board.title}}</h3>
+						<div>{{board.description}}</div>
+						<div>By: {{board.creator.username}}</div>
+
+						<button type="button" class="btn btn-danger btn-md board-remove-button" ng-click="deleteBoard(board._id)"><i class="glyphicon glyphicon-remove"></i></button>
+						<button type="button" class="btn btn-info btn-md board-edit-button" ng-click="editBoard(board)"><i class="glyphicon glyphicon-cog"></i></button>
+						</div>
+					</a>
+				</li>	
+			</ul>
+		</div>
 </body>
