--- a/html/workflow.html
+++ b/html/workflow.html
@@ -3,36 +3,33 @@
 <link href="/css/workflow.css" rel="stylesheet"  type="text/css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.js"></script>
 <body id="body" ng-controller="workflowController">
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-        </div>
 
-        <!--<a class="navbar-brand navbar-center" ng-href="/boards">Boards</a>-->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a ng-href="/boards">Boards</a></li>
-                    <li><a href="#">Calendar</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
-            </li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-            <input type="text" class="form-control" placeholder="Search">
-        </form>
-        </div>
 
+<nav class="navbar navbar-fixed-left navbar-minimal animate" role="navigation">
+    <div class="navbar-toggler animate">
+        <span class="menu-icon"></span>
     </div>
+    <ul class="navbar-menu animate">
+        <li>
+            <a ng-href="/boards" class="animate">
+                <span class="desc animate"> Boards </span>
+                <span class="glyphicon glyphicon-th"></span>
+            </a>
+        </li>
+        <li>
+            <a href="#blog" class="animate">
+                <span class="desc animate"> User </span>
+                <span class="glyphicon glyphicon-user"></span>
+            </a>
+        </li>
+        <li>
+            <a href="#contact-us" class="animate">
+                <span class="desc animate"> How To Reach Us </span>
+                <span class="glyphicon glyphicon-comment"></span>
+            </a>
+        </li>
+    </ul>
 </nav>
-
 
 <div class="container">       
    <div id="workflow-container" class="row">
@@ -114,7 +111,11 @@
                                 <li><button type="button" ng-click="assignUserToTask(assignee)" style="width:100%; height:40px;">{{assignee.username}}</button></li>
                             </ul>
                         </div>
-                        <div 
+                        <div class="progressBar">
+                            <div data-role="main" class="ui-content">
+                            <input type="range" name="points" id="points" value="50" min="0" max="100" data-show-value="true">
+                            </div>
+                        </div>
                         <div ng-if="assignedUser" class="input-group" style="margin-top:20px; margin-left:20px; margin-right:20px;">
                             <div class="assigneeTo">
                                 <span><span class="glyphicon glyphicon-user"></span> Assigned to : {{assignedUser.username}}<button type="button" class="btn btn-danger btn-md" style="margin:5px;" ng-click="removeAssignee(assignedUser)"><i class="glyphicon glyphicon-remove"></i></button></span>
