--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
 		<script src="http://code.angularjs.org/1.2.1/angular-route.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-cookies.js"></script>
 		<script src="app.js"></script>
 		<script src="/js/controllers/loginController.js"></script>
 		<script src="/js/controllers/boardsController.js"></script>		
