--- a/html/team.html
+++ b/html/team.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href="/css/boards.css" rel="stylesheet">
+<link href="/css/team.css" rel="stylesheet">
 <body ng-controller="boardsController">
 	<div class="container">
 		<nav class="navbar navbar-fixed-left navbar-minimal animate" role="navigation">
@@ -28,10 +28,14 @@
 		    </ul>
 		</nav>
 
-		<!-- Button trigger modal -->
-		<button type="button" class="create-board-button" data-toggle="modal" data-target="#createBoardPopup">
-        <i class="glyphicon glyphicon-plus"></i>
+		<!-- Add User Button -->
+		<button type="button" class="add-user-button" data-toggle="modal" data-target="#createBoardPopup">
+        <i class="glyphicon glyphicon-plus"></i> <i class="glyphicon glyphicon-user"></i>
 		</button>
+
+
+
+
 			<!-- Modal -->
 			<div class="modal fade" id="createBoardPopup" tabindex="-1" role="dialog"
 			aria-labelledby="myModalLabel" aria-hidden="true" ng-model="boardPopupState">
@@ -79,6 +83,41 @@
 				</div>
 			</div>
 		</div>
+
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <div class="col-lg-12">
+          <h6 class="description">YOUR AWESOME TEAM!</h6>
+          <div class="row pt-md">
+            <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 profile">
+            	<div class="img-box">
+            	</div>
+           		<img src="http://placehold.it/60x60">
+            	<h1>Marrie Doi</h1>
+            	<h2>Co-founder/ Operations</h2>
+            	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 profile">
+            	<div class="img-box">
+            	</div>
+           		<img src="http://placehold.it/60x60">
+            	<h1>Marrie Doi</h1>
+            	<h2>Co-founder/ Operations</h2>
+            	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+             <div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 profile">
+            	<div class="img-box">
+            	</div>
+           		<img src="http://placehold.it/60x60">
+            	<h1>Marrie Doi</h1>
+            	<h2>Co-founder/ Operations</h2>
+            	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 		<div class="boards-container">
 			<ul ng-repeat="board in boardsList">
 				<li>
