--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html ng-app="odysseyApp">
 	<head>
 		<meta charset="utf-8">
-		<base href="/"/>
      	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -18,5 +17,6 @@
 		<script src="/js/controllers/loginController.js"></script>
 		<script src="/js/controllers/boardsController.js"></script>		
 		<script src="/js/controllers/workflowController.js"></script>
+		<script src="/js/controllers/teamController.js"></script>
 	</body>
 </html>
