--- a/html/team.html
+++ b/html/team.html
@@ -2,6 +2,8 @@
 <link href="/css/team.css" rel="stylesheet">
 <body ng-controller="boardsController">
 	<div class="container">
+		
+		<!-- Top Left Menu Bar -->
 		<nav class="navbar navbar-fixed-left navbar-minimal animate" role="navigation">
 		    <div class="navbar-toggler animate">
 		        <span class="menu-icon"></span>
@@ -27,62 +29,53 @@
 		        </li>
 		    </ul>
 		</nav>
+		<!-- -->
 
-		<!-- Add User Button -->
-		<button type="button" class="add-user-button" data-toggle="modal" data-target="#createBoardPopup">
-        <i class="glyphicon glyphicon-plus"></i> <i class="glyphicon glyphicon-user"></i>
-		</button>
-
-
-
-
-			<!-- Modal -->
-			<div class="modal fade" id="createBoardPopup" tabindex="-1" role="dialog"
-			aria-labelledby="myModalLabel" aria-hidden="true" ng-model="boardPopupState">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<!-- Modal Header -->
-						<div class="modal-header">
-							<button type="button" class="close"
-							data-dismiss="modal" ng-click="dismissBoardPopup()">
-							<span aria-hidden="true">&times;</span>
-							<span class="sr-only">Close</span>
-						</button>
-						<h4 class="modal-title" id="myModalLabel">
-							New Board
-						</h4>
+		<!-- Invite New Member Popup -->
+		<div id="invite-member-popup" class="modal fade" tabindex="-1" role="dialog"
+		aria-labelledby="myModalLabel" aria-hidden="true" ng-model="boardPopupState">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<!-- Modal Header -->
+					<div class="modal-header">
+						<button type="button" class="close"
+						data-dismiss="modal" ng-click="dismissBoardPopup()">
+						<span aria-hidden="true">&times;</span>
+						<span class="sr-only">Close</span>
+					</button>
+					<h4 class="modal-title">
+					</h4>
 					</div>
 					<!-- Modal Body -->
-					<div class="modal-body">
-						<form role="form" ng-submit="submitBoardForm()" method="POST">
-							<div class="form-group">
-								<div class="input-group">
-										<span class="input-group-addon"><i class="fa fa-plus fa-fw"></i></span>
-									<input class="form-control"
-									id="exampleInputEmail1" ng-model="newBoardTitle" placeholder="Board Title"/>
-								</div>
-							</div>
-							<div class="form-group">
-								<div class = "input-group">
-									<span class="input-group-addon"><i class="fa fa-pencil fa-fw"></i></span>
-									<input class="form-control"
-									id="exampleInputPassword1" ng-model="newBoardDescription" placeholder="Description"/>
-								</div>
-							</div>
-							<div class="form-group">
-								<div class = "input-group">
-										<span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-										<input class="form-control" id="exampleInputPassword1" placeholder="Members"/>
-								</div>
-							</div>
-							<div class="modal-footer">
-								<button type="submit" class="btn btn-primary">Submit</button>
-							</div>
+					<div class="modal-body" style="height:240px;">
+						<form role="form" ng-submit="addNewMember()" method="POST">
+	                        <div class="input-group" style="margin:20px;">
+	                            <span class="input-group-addon success"><span class="glyphicon glyphicon-envelope"></span></span>
+	                            <input type="email" class="form-control input-lg" name="validate-optional" placeholder="New Member's Email" ng-model="newMemberEmail" autocomplete="off">
+	                        </div>
+	                        <div class="input-group" style="margin:20px;">
+			                    <ul class="nav nav-pills">
+			                        <li role="presentation" class="admin-selector"><a href="#" ng-click="selectAdmin()"><i class="glyphicon glyphicon-chevron-up"></i> Admin</a>
+			                        </li>
+			                        <li role="presentation" class="active non-admin-selector"><a href="#" ng-click="selectNonAdmin()"><i class="glyphicon glyphicon-chevron-down"></i> Normal</a>
+			                        </li>
+			                    </ul>
+		                	</div>
+	                        <div style="margin:20px;">
+	                        <button type="submit" class="btn col-xs-12 btn-lg invite-button" ng-disabled="!newMemberEmail">Send an Invite!</button>
+	                        </div>
 						</form>					
 					</div>
 				</div>
 			</div>
 		</div>
+	<!-- -->
+
+	<!-- Add User Button -->
+	<button type="button" class="add-user-button" data-toggle="modal" data-target="#invite-member-popup">
+    	<i class="glyphicon glyphicon-plus"></i> <i class="glyphicon glyphicon-user"></i>
+	</button>
+	<!-- -->
 
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
